--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/react-dom": "^18.2.25",
     "bootstrap": "^5.3.3",
     "firebase": "^10.11.0",
+    "html-to-image": "^1.11.11",
+    "qrcode.react": "^3.1.0",
+    "quagga": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
