--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
     "bootstrap": "^5.3.3",
     "firebase": "^10.11.0",
+    "firebase-tools": "^13.8.0",
     "html-to-image": "^1.11.11",
     "qrcode.react": "^3.1.0",
-    "quagga": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
