--- a/package.json
+++ b/package.json
@@ -51,5 +51,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "first-input-delay": "^0.1.3"
+  }
 }
